fixed alignments in moviecard

--- a/src/scss/components/_moviecard.scss
+++ b/src/scss/components/_moviecard.scss
@@ -23,8 +23,6 @@
 
 .movie-poster img {
     display: block;
-    height: 385px;
-    width: auto;
 }
 .movie-info:hover {
     opacity: 1;
